--- a/index.html
+++ b/index.html
@@ -89,9 +89,50 @@
     <div class="row">
       <div class="col-md-3">
         <div class="card text-center">
-          <img src="img/icons8-handshake-48.png" alt="handshake" class="shake">
+          <div class="card-content">
+          <img src="img/icons8-handshake-48.png" alt="handshake" class="rounded-circle shake" height="90" width="90">
           <h4 class="Ashake">Assistance</h4>
-          <p class="pshake">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint molestias modi commodi temporibus nobis beatae sed, tempora suscipit fuga illo nemo pariatur quaerat minima molestiae fugit. Consequatur temporibus quasi quae libero placeat beatae? Asperiores maxime eaque pariatur. Repellat, qui! Labore.</p>
+          <p class="pshake">We've built and are continuing to build a network of local and regional mentors that are excited to help you along the way.</p>
+        </div>
+          <div class="card-footer text-muted">
+            <button class="btn1 btn-primary text-center" type="submit"><small>Recieve</small></button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card text-center">
+          <div class="card-content">
+          <img src="img/icons8-hammer-48.png" alt="handshake" class="rounded-circle shake" height="90" width="90">
+          <h4 class="Ashake">Education</h4>
+          <p class="pshake">Videos, bootcamps, recruiting agencies, college degree programs... there are so many options! We want you to get what you need and at a price you can afford.</p>
+        </div>
+          <div class="card-footer text-muted">
+            <button class="btn1 btn-primary text-center" type="submit"><small>Learn</small></button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card text-center">
+          <div class="card-content">
+          <img src="img/icons8-facebook-like.gif" alt="handshake" class="rounded-circle shake" height="90" width="90">
+          <h4 class="Ashake">Opportunities</h4>
+          <p class="pshake">What to land a new job? Want to build something that will change the world? Want to see if this stuff is right for you? No matter what, we want to see you progress.</p>
+        </div>
+          <div class="card-footer text-muted">
+            <button class="btn1 btn-primary text-center" type="submit"><small>Find</small></button>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="card text-center">
+          <div class="card-content">
+          <img src="img/icons8-users-48.png" alt="handshake" class="rounded-circle shake" height="90" width="90">
+          <h4 class="Ashake">Community</h4>
+          <p class="pshake">Whether through our local free meetups or online chat group, you've got a group that you can rely on and give back to.</p>
+        </div>
+          <div class="card-footer text-muted">
+            <button class="btn1 btn-primary text-center" type="submit"><small>Join</small></button>
+          </div>
         </div>
       </div>
     </div>
