--- a/index.html
+++ b/index.html
@@ -88,55 +88,253 @@
     </div>
     <div class="row">
       <div class="col-md-3">
-        <div class="card text-center">
-          <div class="card-content">
+        <div class="card ">
+          <div class="card-content text-center">
           <img src="img/icons8-handshake-48.png" alt="handshake" class="rounded-circle shake" height="90" width="90">
           <h4 class="Ashake">Assistance</h4>
           <p class="pshake">We've built and are continuing to build a network of local and regional mentors that are excited to help you along the way.</p>
         </div>
-          <div class="card-footer text-muted">
+          <div class="card-footer text-muted text-center">
             <button class="btn1 btn-primary text-center" type="submit"><small>Recieve</small></button>
           </div>
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card text-center">
-          <div class="card-content">
+        <div class="card ">
+          <div class="card-content text-center">
           <img src="img/icons8-hammer-48.png" alt="handshake" class="rounded-circle shake" height="90" width="90">
           <h4 class="Ashake">Education</h4>
           <p class="pshake">Videos, bootcamps, recruiting agencies, college degree programs... there are so many options! We want you to get what you need and at a price you can afford.</p>
         </div>
-          <div class="card-footer text-muted">
+          <div class="card-footer text-muted text-center">
             <button class="btn1 btn-primary text-center" type="submit"><small>Learn</small></button>
           </div>
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card text-center">
-          <div class="card-content">
+        <div class="card ">
+          <div class="card-content text-center">
           <img src="img/icons8-facebook-like.gif" alt="handshake" class="rounded-circle shake" height="90" width="90">
           <h4 class="Ashake">Opportunities</h4>
           <p class="pshake">What to land a new job? Want to build something that will change the world? Want to see if this stuff is right for you? No matter what, we want to see you progress.</p>
         </div>
-          <div class="card-footer text-muted">
+          <div class="card-footer text-muted text-center">
             <button class="btn1 btn-primary text-center" type="submit"><small>Find</small></button>
           </div>
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card text-center">
-          <div class="card-content">
+        <div class="card">
+          <div class="card-content text-center">
           <img src="img/icons8-users-48.png" alt="handshake" class="rounded-circle shake" height="90" width="90">
           <h4 class="Ashake">Community</h4>
           <p class="pshake">Whether through our local free meetups or online chat group, you've got a group that you can rely on and give back to.</p>
         </div>
-          <div class="card-footer text-muted">
+          <div class="card-footer text-muted text-center">
             <button class="btn1 btn-primary text-center" type="submit"><small>Join</small></button>
           </div>
         </div>
       </div>
     </div>
+  </div>
+</section>
 
+<!-----------------------What makes us different------------------>
+<section class="differentt">
+  <div class="container">
+    <div class="row">
+      <h1 class="different text-center">What makes us different</h1>
+    </div>
+    <div class="row make">
+      <div class="col-md-5">
+        <h3 class="accesh3">Accessible</h3>
+        <h6 class="accesh6"><strong>APPROACH</strong></h6>
+        <p class="acceshp">Having to learn something new on top of full-time work or taking care of kids is tough. With this in mind, we keep things easy to understand and at an undemanding pace.</p>
+      </div>
+      <div class="col-md-7">
+        <img src="img/accesseble.jpg" alt="accesseble" class="accessable img-fluid">
+      </div>
+    </div>
+    <div class="row make">
+      <div class="col-md-7">
+        <img src="img/improved.jpg" alt="accesseble" class="accessable img-fluid">
+      </div>
+      <div class="col-md-5">
+        <h3 class="accesh3">Improved</h3>
+        <h6 class="accesh6"><strong>CHANCES & SALARY</strong></h6>
+        <p class="acceshp">Want to double the amount of money you make? Want to build something that will change the world? Want to see if this stuff is right for you? No matter your goal, we want to see you grow.</p>
+      </div>
+    </div>
+    <div class="row make">
+      <div class="col-md-5">
+        <h3 class="accesh3">100%</h3>
+        <h6 class="accesh6"><strong>SUCCESS</strong></h6>
+        <p class="acceshp">Our goal is that attendees always leave being more prepared for their course work, next task, or job interview.</p>
+      </div>
+      <div class="col-md-7">
+        <img src="img/success.jpg" alt="accesseble" class="accessable img-fluid">
+      </div>
+    </div>
+    <div class="row make">
+      <div class="col-md-7">
+        <img src="img/affordable.jpg" alt="accesseble" class="accessable img-fluid">
+      </div>
+      <div class="col-md-5">
+        <h3 class="accesh3">Affordable</h3>
+        <h6 class="accesh6"><strong>RESOURCES</strong></h6>
+        <p class="acceshp">We're not a recruiting agency, university, or bootcamp, but we care deeply about providing people with meaningful assistance, resources, meetups, and connections for free or at a cost that everyday folks can afford.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!----------------Here's what people are saying about us---------------------->
+<section class="help">
+  <div class="container">
+    <div class="row">
+      <h1 class="this text-center">Here's what people are saying about us</h1>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card shadow-sm p-3 mb-5 bg-body rounded">
+          <div class="card-content">
+            <p>Code Connector events give me encouragement to keep going when it's easier to give up. The family atmosphere helps to motivate you to continue in your Coding or IT endeavors. The events incorporate work with fun. I cannot thank the organizers enough for having the foresight to bring this awesome organization to my city (Memphis). I understand the grit and grind that it takes to make this chapter successful.</p>
+          </div>
+          <div class="card-footer bg-transparent pb-0 pt-0">
+           <div class="row d-flex align-items-center">
+             <div class="col-3">
+              <img src="img/1.png" alt="1" class="img-fluid rounded-circle" width="50" >
+             </div>
+             <div class="col">
+                <p class="mb-0 mt-3">Demetria Farewell</p>
+                <p><a href="#"><i class="bi bi-linkedin"></i></a></p>
+              </div>
+             </div>
+           </div>
+          </div>
+        </div>
+      <div class="col-md-4">
+        <div class="card shadow-sm p-3 mb-5 bg-body rounded">
+          <div class="card-content">
+            <p>This organization has helped me connect with other developers around Memphis. I have made friends through CC that have shown me so much and I have always learned something when going to the meetups. I highly recommend going and listening and showing off your project. The feedback and experience is invaluable.</p>
+          </div>
+          <div class="card-footer bg-transparent pb-0 pt-0">
+           <div class="row d-flex align-items-center">
+             <div class="col-3">
+              <img src="img/walker.jpg" alt="1" class="img-fluid rounded-circle" width="50" >
+             </div>
+             <div class="col">
+                <p class="mb-0 mt-3">Walker Laury</p>
+                <p><a href="#"><i class="bi bi-linkedin"></i></a></p> 
+              </div>
+             </div>
+           </div>
+          </div>
+        </div>
+      <div class="col-md-4">
+        <div class="card shadow-sm p-3 mb-5 bg-body rounded">
+          <div class="card-content">
+            <p>I started a tech bootcamp early 2019, with absolutely no ties to the tech-world, aside from my brother. CC provided me with an extremely supportive and motivational community, one that helped me land my first tech job 7 months after my bootcamp!</p>
+          </div>
+          <div class="card-footer bg-transparent pb-0 pt-0">
+           <div class="row d-flex align-items-center">
+             <div class="col-3">
+              <img src="img/herlong.jpg" alt="1" class="img-fluid rounded-circle" width="50" >
+             </div>
+             <div class="col">
+                <p class="mb-0 mt-3">Walker Laury</p>
+                <p><a href="#"><i class="bi bi-linkedin"></i></a></p> 
+              </div>
+             </div>
+           </div>
+          </div>
+        </div>
+      <div class="col-md-4">
+        <div class="card shadow-sm p-3 mb-5 bg-body rounded">
+          <div class="card-content">
+            <p>Code Connector has and continues to be an amazing environment for budding or experienced developers. I love the variety of people I get to meet at their workshops and events.</p>
+          </div>
+          <div class="card-footer bg-transparent pb-0 pt-0">
+           <div class="row d-flex align-items-center">
+             <div class="col-3 mb-0 mt-0">
+              <img src="img/david.png" alt="1" class="img-fluid rounded-circle" width="50" >
+             </div>
+             <div class="col">
+                <p class="mb-0 mt-3">Walker Laury</p>
+                <p><a href="#"><i class="bi bi-linkedin"><i class="bi bi-globe2 m-2"></i></i></a></p> 
+             </div>
+             </div>
+           </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card shadow-sm p-3 mb-5 bg-body rounded">
+            <div class="card-content">
+              <p>Code Connector was a great introduction to the tech community in Memphis. They provide a space to interact with developers of all levels and as a junior dev new to the game and I feel like I learned a lot and even taught a little through the meet ups that CC organizes.</p>
+            </div>
+            <div class="card-footer bg-transparent pb-0 pt-0">
+             <div class="row d-flex align-items-center">
+               <div class="col-3">
+                <img src="img/autum.png" alt="1" class="img-fluid rounded-circle" width="50" >
+               </div>
+               <div class="col">
+                  <p class="mb-0 mt-3">Autumn Ragland</p>
+                  <p><a href="#"><i class="bi bi-linkedin"></i><i class="bi bi-twitter m-2"></i></a></p> 
+                </div>
+               </div>
+             </div>
+            </div>
+          </div>
+        <div class="col-md-4">
+          <div class="card shadow-sm p-3 mb-5 bg-body rounded">
+            <div class="card-content">
+              <p>Becoming a successful software engineer is a road best traveled with friends. Communities like Code Connector provide the resources, support, and inspiration to get started and get ahead. Whether you're starting from scratch or a seasoned pro, the knowledge sharing, mentorship, and exposure to new topics you'll experience when you get involved is sure to be rewarding.</p>
+            </div>
+            <div class="card-footer bg-transparent pb-0 pt-0">
+             <div class="row d-flex align-items-center">
+               <div class="col-3">
+                <img src="img/george.jpg" alt="1" class="img-fluid rounded-circle" width="50" >
+               </div>
+               <div class="col">
+                  <p class="mb-0 mt-3">George Spake</p>
+                  <p><a href="#"><i class="bi bi-twitter"></i><i class="bi bi-instagram m-2"></i></a></p> 
+                </div>
+               </div>
+             </div>
+            </div>
+          </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!--------------company-------------->
+<section class="company">
+<div class="container  text-center ml-5">
+  <h1 class="com1">Send word our way</h1>
+  <p class="comp">Whether you're needing assistance or just want to say <br> hello, we'd love to hear form you.</p>
+  <a href="#"><button type="button" class="btn btn-primary btn-lg"><strong>Via Facebook</strong></button></a>
+  <a href="#"><button type="button" class="btn btn-primary btn-lg m-4"><strong>Via Twitter</strong></button></a>
+</div>
+</section>
+
+<!-----------footer---------->
+<section class="footer">
+  <div class="container text-center">
+    <div class="row">
+      <div class="col-md-6">
+        <p>Made with bootstrap content design by churchill  2021</p>
+      </div>
+      <div class="col-md-6">
+        <p><i class="bi bi-slack"></i>
+          <i class="bi bi-facebook"></i>
+          <i class="bi bi-twitter"></i>
+          <i class="bi bi-linkedin"></i>
+          <i class="bi bi-calendar3"></i>
+          <i class="bi bi-youtube"></i>
+          <i class="bi bi-instagram"></i></p>
+      </div>
+    </div>
   </div>
 
 </section>
