--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <p class="pshake">We've built and are continuing to build a network of local and regional mentors that are excited to help you along the way.</p>
         </div>
           <div class="card-footer text-muted text-center">
-            <button class="btn1 btn-primary text-center" type="submit"><small>Recieve</small></button>
+            <button class="btn btn-primary text-center" type="submit"><small>Recieve</small></button>
           </div>
         </div>
       </div>
@@ -107,7 +107,7 @@
           <p class="pshake">Videos, bootcamps, recruiting agencies, college degree programs... there are so many options! We want you to get what you need and at a price you can afford.</p>
         </div>
           <div class="card-footer text-muted text-center">
-            <button class="btn1 btn-primary text-center" type="submit"><small>Learn</small></button>
+            <button class="btn btn-primary text-center" type="submit"><small>Learn</small></button>
           </div>
         </div>
       </div>
@@ -119,7 +119,7 @@
           <p class="pshake">What to land a new job? Want to build something that will change the world? Want to see if this stuff is right for you? No matter what, we want to see you progress.</p>
         </div>
           <div class="card-footer text-muted text-center">
-            <button class="btn1 btn-primary text-center" type="submit"><small>Find</small></button>
+            <button class="btn btn-primary text-center" type="submit"><small>Find</small></button>
           </div>
         </div>
       </div>
@@ -131,7 +131,7 @@
           <p class="pshake">Whether through our local free meetups or online chat group, you've got a group that you can rely on and give back to.</p>
         </div>
           <div class="card-footer text-muted text-center">
-            <button class="btn1 btn-primary text-center" type="submit"><small>Join</small></button>
+            <button class="btn btn-primary text-center" type="submit"><small>Join</small></button>
           </div>
         </div>
       </div>
