--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </ul>
               </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">About</a>
+            <a class="nav-link" aria-current="page" href="about.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Code of Conduct</a>
@@ -326,13 +326,14 @@
         <p>Made with bootstrap content design by churchill  2021</p>
       </div>
       <div class="col-md-6">
-        <p><i class="bi bi-slack"></i>
-          <i class="bi bi-facebook"></i>
-          <i class="bi bi-twitter"></i>
-          <i class="bi bi-linkedin"></i>
-          <i class="bi bi-calendar3"></i>
-          <i class="bi bi-youtube"></i>
-          <i class="bi bi-instagram"></i></p>
+        <p><i class="bi bi-slack width=30 height=30"></i>
+          <i class="bi bi-facebook" width="30" height="30"></i>
+          <i class="bi bi-twitter" width="30" height="30"></i>
+          <i class="bi bi-linkedin" width="30" height="30"></i>
+          <i class="bi bi-calendar3" width="30" height="30"></i>
+          <i class="bi bi-youtube" width="30" height="30"></i>
+          <i class="bi bi-instagram" width="30" height="30"></i>
+          <i class="bi bi-whatsapp" width="30" height="30"></i></p>
       </div>
     </div>
   </div>
