--- a/about.html
+++ b/about.html
@@ -245,8 +245,56 @@
             </div>
         </div>
     </div>
+</section>
+
+<!----------------Interest in voleentering  -->
+<section class="interest pt-5">
+    <div class="container  text-center ml-5">
+      <h1 class="intereh1 mt-4">Interested in volunteering and joining our team?</h1>
+      <p class="interep">We think that's great and would love to talk with you!</p>
+      <a href="#"><button type="button" class="btn btn-primary btn-lg"><strong>Connect</strong></button></a>
+      <a href="#"><button type="button" class="btn btn-primary btn-lg m-4"><strong>Learn More</strong></button></a>
+    </div>
+    </section>
+
+
+
+<!-------------------------Our Incredible partner--------------------->
+<section class="partner">
+  <div class="container">
+    <div class="row  justify-content-center ">
+     <div class="col-12  mt-5 mb-3 text-center">
+      <h1>
+        Our incredible partner
+      </h1>
+     </div>
+      <div class="col-md-5 mt-3 mb-4 ">
+        <img src="img/memtech-dark.gif" alt="memtech" width="" class="img-fluid" >
+      </div>
+      <div class="col-12 mb-5 text-center">
+      <p class="teamp">
+        Memphis Technology Foundation is a group of people and<br> 501(c)(3) organization with a diverse interest in<br> technology looking to raise the tech tide in Memphis,<br> TN and beyond.
+      </p>
+     </div>
+    </div>
+    <div class="row  justify-content-center">
+      <div class="col-md-3 ml-5 mb-5 text-center ">
+        <a href="#"><button type="button" class="btn btn-primary btn-lg"><strong>Learn More</strong></button></a>
+      </div>
+      <div class="col-md-2 mb-5 text-center">
+        <a href="#"><button type="button" class="btn btn-primary btn-lg"><strong>Donate</strong></button></a>
+      </div>
+    </div>
+  </div>
 
 </section>
+
+
+
+
+
+
+
 
 <!--------------company-------------->
 <section class="company">
