--- a/about.html
+++ b/about.html
@@ -275,25 +275,12 @@
       <p class="teamp">
         Memphis Technology Foundation is a group of people and<br> 501(c)(3) organization with a diverse interest in<br> technology looking to raise the tech tide in Memphis,<br> TN and beyond.
       </p>
+      <a href="#" class="btn btn-primary btn-lg"><strong>Learn More</strong></a>
+      <a href="#" class="btn btn-primary btn-lg m-4"><strong>Learn More</strong></a>
      </div>
     </div>
-    <div class="row  justify-content-center">
-      <div class="col-md-3 ml-5 mb-5 text-center ">
-        <a href="#"><button type="button" class="btn btn-primary btn-lg"><strong>Learn More</strong></button></a>
-      </div>
-      <div class="col-md-2 mb-5 text-center">
-        <a href="#"><button type="button" class="btn btn-primary btn-lg"><strong>Donate</strong></button></a>
-      </div>
-    </div>
   </div>
-
 </section>
-
-
-
-
-
-
 
 
 <!--------------company-------------->
