--- a/learncode.html
+++ b/learncode.html
@@ -60,7 +60,8 @@
       <div class="col">
       <div class="row p-lg-5">
         <div class="col-md-12 text-light text-center">
-          <H1 class="headh-abt" style="text-shadow: 4 5 10 #212529;"><small><strong>Helping communities through service</strong></small></H1>
+            <p class="learnhh">There's no need to learn alone</p>
+          <H1 class="learn-abt" style="text-shadow: 4 5 10 #212529;"><small><strong>Let's thrive as a community</strong></small></H1>
         </div>
       </div>
     </div>
