--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#"><small><strong>CODE CONNECTOR</strong></small></a>
+      <a class="navbar-brand" href="index.html"><small><strong>CODE CONNECTOR</strong></small></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -23,7 +23,7 @@
                   Get involved
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="#">Learn to code</a></li>
+                  <li><a class="dropdown-item" href="learncode.html">Learn to code</a></li>
                   <li><a class="dropdown-item" href="#">Volunteer</a></li>
                   <li><a class="dropdown-item" href="#">Sponsor</a></li>
                   <li><a class="dropdown-item" href="#">Partner</a></li>
@@ -35,7 +35,7 @@
             <a class="nav-link" aria-current="page" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Code of Conduct</a>
+            <a class="nav-link" href="code.html">Code of Conduct</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">contact</a>
