--- a/code.html
+++ b/code.html
@@ -127,7 +127,7 @@
                 <p class="pledgep"><b>Consequence :</b>  A permanent ban from any sort of public interaction within the community.
                 </p>
                 <h2 class="pledgeh1">Attribution</h2>
-                <p class="pledgep">This Code of Conduct is adapted from the Contributor Covenant, version 2.0, available at <a href="#" class="linkk">https://www.contributor-covenant.org/version/2/0/code_of_conduct.html</a>.</p>
+                <p class="pledgep">This Code of Conduct is adapted from the Contributor Covenant, version 2.0, available at <a href="#" class="linkk">https://www.contributor-covenant.org/version/2/0/code_of<br>_conduct.html</a>.</p>
                 <p class="pledgep">Community Impact Guidelines were inspired by <a href="#" class="linkk">Mozilla’s code of conduct enforcement ladder</a>.</p>
                 <p class="pledgep">For answers to common questions about this code of conduct, see the FAQ at <a href="#" class="linkk">https://www.contributor-covenant.org/faq</a>. Translations are available at <a href="#" class="linkk">https://www.contributor-covenant.org/translations</a>.</p>
            </div>
