--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <li><a class="dropdown-item" href="learncode.html">Learn to code</a></li>
-                  <li><a class="dropdown-item" href="#">Volunteer</a></li>
+                  <li><a class="dropdown-item" href="voluntee.html">Volunteer</a></li>
                   <li><a class="dropdown-item" href="#">Sponsor</a></li>
                   <li><a class="dropdown-item" href="#">Partner</a></li>
                   <hr>
