--- a/learncode.html
+++ b/learncode.html
@@ -24,7 +24,7 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <li><a class="dropdown-item" href="learncode.html">Learn to code</a></li>
-                  <li><a class="dropdown-item" href="#">Volunteer</a></li>
+                  <li><a class="dropdown-item" href="voluntee.html">Volunteer</a></li>
                   <li><a class="dropdown-item" href="#">Sponsor</a></li>
                   <li><a class="dropdown-item" href="#">Partner</a></li>
                   <hr>
@@ -77,7 +77,7 @@
         <h1>What we Offer</h1>
       </div>
       <div class="row justify-content-center">
-        <div class="col-md-4 pt-5">
+        <div class="col-md-6 col-lg-4 pt-5">
          <div class="card  shadow p-3 mb-5 bg-body rounded">
            <div class="card-content text-center">
             <img src="img/world.png" alt="" width="90">
@@ -87,7 +87,7 @@
            </div>
          </div>
         </div>
-        <div class="col-md-4 pt-5">
+        <div class="col-md-6 col-lg-4 pt-5">
          <div class="card shadow p-3 mb-5 bg-body rounded">
            <div class="card-content text-center">
             <img src="img/icons8-users-48.png" alt="" width="90">
@@ -104,9 +104,9 @@
 
 
 <!-----------------------Our community ------------------>
-<section class="community">
+<section class="community1 mt-5">
   <div class="container">
-    <div class="row comunity">
+    <div class="row">
       <div class="col-md-12 conm text-center">
         <h1 class="conmh">Our Online Community</h1>
       </div>
@@ -138,9 +138,9 @@
       <div class="col-md-7">
         <img src="img/woman.jpg" alt="accesseble" class="accessable img-fluid">
       </div>
-      <div class="row btnjoint">
-        <div class="col-md-12 text-center mt-5">
-          <a class="btn2 btn-light" href="#" role="button"><strong>Joint The Community</strong></a>
+      <div class="row btnjoint justify-content-center">
+        <div class="col-md-6 mb-md-0">
+          <a class="btn2 btn-xl btn-light" href="#" ><strong>Join The Community</strong></a>
         </div>
       </div>
     </div>
@@ -157,7 +157,19 @@
         <img src="img/threepeople.jpg" alt="accesseble" class="accessable img-fluid">
       </div>
       <div class="col-md-5">
-        <p class="acceshp"></p>
+        <p class="acceshpp">These gatherings aren't class, so there won't be a teacher, but it is your opportunity to talk with other people and get help jumpstarting your learning process or with a programming lesson / personal project you've been working on.</p>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-md-5">
+        <div class="card  shadow p-3 mb-5 bg-body rounded mt-5 mb-5">
+          <div class="card-content1 text-center">
+            <h1 class="eventp">Upcoming Events</h1>
+
+            <a href="#" class="btn btn-primary">Facebook</a>
+            <a href="#" class="btn btn-primary m-3">Eventbrite</a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -165,10 +177,11 @@
 <!----------------Interest in voleentering  -->
 <section class="interest pt-5">
     <div class="container  text-center ml-5">
-      <h1 class="intereh1 mt-4">Interested in volunteering and joining our team?</h1>
-      <p class="interep">We think that's great and would love to talk with you!</p>
-      <a href="#"><button type="button" class="btn btn-primary btn-lg"><strong>Connect</strong></button></a>
-      <a href="#"><button type="button" class="btn btn-primary btn-lg m-4"><strong>Learn More</strong></button></a>
+      <h1 class="intereh1 mt-4">Not seeing an event in your area?</h1>
+      <p class="interep">WNo worries! Join our online community and/or send word our way and,<br> with your help, we'll work to create a meetup in your local<br> community.
+      </p>
+      <a href="#"><button type="button" class="btn btn-primary btn-lg"><strong>join</strong></button></a>
+      <a href="#"><button type="button" class="btn btn-primary btn-lg m-4"><strong>Connect</strong></button></a>
     </div>
     </section>
 
