--- a/voluntee.html
+++ b/voluntee.html
@@ -77,12 +77,12 @@
         <h1 class="meedp">What we're needing</h1>
       </div>
     </div>
-    <div class="row">
+    <div class="row mb-5">
       <div class="col-md-3">
         <div class="card shadow-sm p-3 mb-5 bg-body rounded">
           <div class="card-content  text-center">
             <img src="img/walking.png" alt="walking" class="rounded-circle shadow-sm p-3 mb-5 bg-body rounded" width="90">
-            <h2 class="needp"><strong>Leadership</strong></h2>
+            <h4 class="needp">Leadership</h4>
           </div>
         </div>
       </div>
@@ -90,7 +90,7 @@
         <div class="card shadow-sm p-3 mb-5 bg-body rounded">
           <div class="card-content  text-center">
             <img src="img/astronaut.png" alt="walking" class="rounded-circle shadow-sm p-3 mb-5 bg-body rounded" width="90">
-            <h2 class="needp"><strong>Experience</strong></h2>
+            <h4 class="needp">Experience</h4>
           </div>
         </div>
       </div>
@@ -98,7 +98,7 @@
         <div class="card shadow-sm p-3 mb-5 bg-body rounded">
           <div class="card-content  text-center">
             <img src="img/hand.png" alt="walking" class="rounded-circle shadow-sm p-3 mb-5 bg-body rounded" width="90">
-            <h2 class="needp"><strong>Encouragement</strong></h2>
+            <h4 class="needp">Encouragement</h4>
           </div>
         </div>
       </div>
@@ -106,12 +106,51 @@
         <div class="card shadow-sm p-3 mb-5 bg-body rounded">
           <div class="card-content  text-center">
             <img src="img/fire.png" alt="walking" class="rounded-circle shadow-sm p-3 mb-5 bg-body rounded" width="90">
-            <h2 class="needp"><strong>Inspiration</strong></h2>
+            <h4 class="needp">Inspiration</h4>
           </div>
         </div>
       </div>
     </div>
   </div>
+</section>
+
+<section>
+    <div class="container">
+      <div class="row mt-5 mb-5">
+      <div class="col-md-12  text-center">
+        <h2 class="where">Where we Help</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-5">
+        <h3 class="accesh3">Meetups</h3>
+        <p class="acceshp">Whether it's through leadership or through assistance, we're always looking for people to step up and be there to help people meet in their local community.</p>
+      </div>
+      <div class="col-md-7">
+        <img src="img/voluntee-group.jpg" alt="accesseble" class="accessable img-fluid">
+      </div>
+    </div>
+    <div class="row make">
+      <div class="col-md-7">
+        <img src="img/voluntee-group1.jpg" alt="accesseble" class="accessable img-fluid">
+      </div>
+      <div class="col-md-5">
+        <h3 class="accesh3">Classes</h3>
+        <p class="acceshp">We may not be a recruiting agency, university, or bootcamp, but we do like setting communities up with easy-to-understand, relative, and affordable classes. If you're looking to teach, we'd love to give you that opportunity.</p>
+      </div>
+    </div>
+    <div class="row make">
+      <div class="col-md-5">
+        <h3 class="accesh3">Online</h3>
+        <p class="acceshp">Even you're not able to attend meetups in your local, your drive to help and wisedom could help someone in need through our online chat community.</p>
+      </div>
+      <div class="col-md-7">
+        <img src="img/voluntee-group2.jpg" alt="accesseble" class="accessable img-fluid">
+      </div>
+    </div>
+    </div>
+    </div>
+
 </section>
 
 
