--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <li><a class="dropdown-item" href="learncode.html">Learn to code</a></li>
                   <li><a class="dropdown-item" href="voluntee.html">Volunteer</a></li>
-                  <li><a class="dropdown-item" href="#">Sponsor</a></li>
+                  <li><a class="dropdown-item" href="sponsor.html">Sponsor</a></li>
                   <li><a class="dropdown-item" href="#">Partner</a></li>
                   <hr>
                   <li><a class="dropdown-item" href="#">Start a meet-up</a></li>
@@ -60,7 +60,7 @@
       <div class="col">
       <div class="row p-lg-5">
         <div class="col-md-12 text-light text-center">
-          <H1 class="headh-abt" style="text-shadow: 4 5 10 #212529;"><small><strong>Helping communities through service</strong></small></H1>
+          <H1 class="headh-abt" style="text-shadow: 4 5 10 #212529;"><small><strong></strong>Helping communities through service</strong></small></H1>
         </div>
       </div>
     </div>
@@ -248,12 +248,20 @@
 </section>
 
 <!----------------Interest in voleentering  -->
-<section class="interest pt-5">
-    <div class="container  text-center ml-5">
-      <h1 class="intereh1 mt-4">Interested in volunteering and joining our team?</h1>
-      <p class="interep">We think that's great and would love to talk with you!</p>
+<section class="interest ">
+    <div class="container-fluid  text-center interestc" style="background-color: rgba(0, 0, 255, 0.363);">
+      <div class="row">
+       <div class="col-md-12">
+        <h1 class="intereh1">Interested in volunteering and joining our team?</h1>
+       </div>
+      <div class="col-md-12">
+        <p class="interep">We think that's great and would love to talk with you!</p>
+      </div>
+     <div class="col-md-12 pt-5">
       <a href="#"><button type="button" class="btn btn-primary btn-lg"><strong>Connect</strong></button></a>
       <a href="#"><button type="button" class="btn btn-primary btn-lg m-4"><strong>Learn More</strong></button></a>
+     </div>
+      </div>
     </div>
     </section>
 
