--- a/voluntee.html
+++ b/voluntee.html
@@ -25,7 +25,7 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <li><a class="dropdown-item" href="learncode.html">Learn to code</a></li>
                   <li><a class="dropdown-item" href="voluntee.html">Volunteer</a></li>
-                  <li><a class="dropdown-item" href="#">Sponsor</a></li>
+                  <li><a class="dropdown-item" href="sponsor.html">Sponsor</a></li>
                   <li><a class="dropdown-item" href="#">Partner</a></li>
                   <hr>
                   <li><a class="dropdown-item" href="#">Start a meet-up</a></li>
@@ -150,9 +150,22 @@
     </div>
     </div>
     </div>
-
 </section>
 
+
+<!-- ------------bottom line----------->
+<section class="bottom" style="background-color: rgba(0, 0, 255, 0.363);">
+  <div class="container-fluid" style="background-color: rgba(0, 0, 255, 0.363);">
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <h3 class="bottomh">The bottom line</h3>
+      </div>
+      <div class="col-md-12 text-center">
+        <p class="bottomp">Whether you're a tech professional, someone that's<br> interested in seeing your local tech community grow, or<br> you're simply tired of building things alone - we'd love<br> to welcome you into the Code Connector team.</p>
+      </div>
+    </div>
+  </div>
+</section>
 
 
 <!--------------company-------------->
