--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <li><a class="dropdown-item" href="learncode.html">Learn to code</a></li>
                   <li><a class="dropdown-item" href="voluntee.html">Volunteer</a></li>
-                  <li><a class="dropdown-item" href="#">Sponsor</a></li>
+                  <li><a class="dropdown-item" href="sponsor.html">Sponsor</a></li>
                   <li><a class="dropdown-item" href="#">Partner</a></li>
                   <hr>
                   <li><a class="dropdown-item" href="#">Start a meet-up</a></li>
