--- a/partner.html
+++ b/partner.html
@@ -60,8 +60,8 @@
       <div class="col">
       <div class="row p-lg-5">
         <div class="col-md-12 text-light text-center">
-          <p class="volunteep">Want to volunteer for or lead one of our events?</p>
-          <H1 class="voluntee" style="text-shadow: 4 5 10 #212529;"><small><strong>We'd love to welcome you to our team</strong></small></H1>
+          <p class="volunteep">Want to improve the quality of your efforts?</p>
+          <H1 class="voluntee" style="text-shadow: 4 5 10 #212529;"><small><strong>We'd love to team up with you</strong></small></H1>
         </div>
       </div>
     </div>
@@ -70,86 +70,48 @@
 </section>
 
 <!------------------What we are needing---------------->
-<section class="needing">
+<section class="">
   <div class="container">
     <div class="row">
       <div class="col-md-12 needwe text-center">
-        <h1 class="meedp">What we're needing</h1>
+        <h1 class="meedp">How we help</h1>
       </div>
     </div>
     <div class="row mb-5">
       <div class="col-md-3">
-        <div class="card shadow-sm p-3 mb-5 bg-body rounded">
+        <div class="card shadow-sm p-3 mb-3 bg-body rounded">
           <div class="card-content  text-center">
-            <img src="img/walking.png" alt="walking" class="rounded-circle shadow-sm p-3 mb-5 bg-body rounded" width="90">
-            <h4 class="needp">Leadership</h4>
+            <img src="img/icons8-checklist-48.png" alt="walking" class="rounded-circle shadow-sm p-3 mb-5 bg-body rounded" width="90">
+            <h4 class="needp">Programming</h4>
           </div>
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card shadow-sm p-3 mb-5 bg-body rounded">
+        <div class="card shadow-sm p-3 mb-3 bg-body rounded">
           <div class="card-content  text-center">
-            <img src="img/astronaut.png" alt="walking" class="rounded-circle shadow-sm p-3 mb-5 bg-body rounded" width="90">
-            <h4 class="needp">Experience</h4>
+            <img src="img/icons8-ball-point-pen-48.png" alt="walking" class="rounded-circle shadow-sm p-3 mb-5 bg-body rounded" width="90">
+            <h4 class="needp">Design</h4>
           </div>
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card shadow-sm p-3 mb-5 bg-body rounded">
+        <div class="card shadow-sm p-3 mb-3 bg-body rounded">
           <div class="card-content  text-center">
-            <img src="img/hand.png" alt="walking" class="rounded-circle shadow-sm p-3 mb-5 bg-body rounded" width="90">
-            <h4 class="needp">Encouragement</h4>
+            <img src="img/icons8-speaker-medium-volume-48.png" alt="walking" class="rounded-circle shadow-sm p-3 mb-5 bg-body rounded" width="90">
+            <h4 class="needp">Marketing</h4>
           </div>
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card shadow-sm p-3 mb-5 bg-body rounded">
+        <div class="card shadow-sm p-3 mb-3 bg-body rounded">
           <div class="card-content  text-center">
-            <img src="img/fire.png" alt="walking" class="rounded-circle shadow-sm p-3 mb-5 bg-body rounded" width="90">
-            <h4 class="needp">Inspiration</h4>
+            <img src="img/icons8-handshake-48.png" alt="walking" class="rounded-circle shadow-sm p-3 mb-5 bg-body rounded" width="90">
+            <h4 class="needp">Support</h4>
           </div>
         </div>
       </div>
     </div>
   </div>
-</section>
-
-<section>
-    <div class="container">
-      <div class="row mt-5 mb-5">
-      <div class="col-md-12  text-center">
-        <h2 class="where">Where we Help</h2>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-5">
-        <h3 class="accesh3">Meetups</h3>
-        <p class="acceshp">Whether it's through leadership or through assistance, we're always looking for people to step up and be there to help people meet in their local community.</p>
-      </div>
-      <div class="col-md-7">
-        <img src="img/voluntee-group.jpg" alt="accesseble" class="accessable img-fluid">
-      </div>
-    </div>
-    <div class="row make">
-      <div class="col-md-7">
-        <img src="img/voluntee-group1.jpg" alt="accesseble" class="accessable img-fluid">
-      </div>
-      <div class="col-md-5">
-        <h3 class="accesh3">Classes</h3>
-        <p class="acceshp">We may not be a recruiting agency, university, or bootcamp, but we do like setting communities up with easy-to-understand, relative, and affordable classes. If you're looking to teach, we'd love to give you that opportunity.</p>
-      </div>
-    </div>
-    <div class="row make">
-      <div class="col-md-5">
-        <h3 class="accesh3">Online</h3>
-        <p class="acceshp">Even you're not able to attend meetups in your local, your drive to help and wisedom could help someone in need through our online chat community.</p>
-      </div>
-      <div class="col-md-7">
-        <img src="img/voluntee-group2.jpg" alt="accesseble" class="accessable img-fluid">
-      </div>
-    </div>
-    </div>
-    </div>
 </section>
 
 
@@ -161,11 +123,59 @@
         <h3 class="bottomh">The bottom line</h3>
       </div>
       <div class="col-md-12 text-center">
-        <p class="bottomp">Whether you're a tech professional, someone that's<br> interested in seeing your local tech community grow, or<br> you're simply tired of building things alone - we'd love<br> to welcome you into the Code Connector team.</p>
+        <p class="bottomp">If you're a meetup, class, hackathon, networking event, etc. that is<br> helping your community for free, we're here to help. After all, our<br> mission is to see people start learning tech and thrive not matter<br> if it's through Code Connector meetup or not.</p>
+      </div>
+      <div class="col-md-12 text-center">
+        <a href="#"><button type="button" class="btn btn-light btn-lg"><strong>See Requirement</strong></button></a>
+        <a href="#"><button type="button" class="btn btn-light btn-lg m-4"><strong>Contact</strong></button></a>
       </div>
     </div>
   </div>
 </section>
+
+<section>
+  <div class="container mb-5">
+    <div class="row mt-5 mb-5">
+       <div class="col-md-12  text-center">
+        <h2 class="where">What we require</h2>
+      </div>
+    </div>
+      <div class="row justify-content-center">
+        <div class="col-md-3">
+          <div class="card cc shadow-sm p-3 mb-2 bg-body rounded">
+            <div class="card-content text-center">
+            <img src="img/icons8-prize-48.png" alt="handshake" class="rounded-circle parti" height="90" width="90">
+            <h3 class="parth">Proof</h3>
+            <p class="partp">It's not necessary for your group to be a non-profit or anything like that, but we need to see that you've been helping people in you community and at no direct cost.</p>
+          </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card cc shadow-sm p-3 mb-2 bg-body rounded">
+            <div class="card-content text-center">
+            <img src="img/icons8-checklist-48.png" alt="handshake" class="rounded-circle parti" height="90" width="90">
+            <h3 class="parth">Plan</h3>
+            <p class="partp">Give us a general idea of what you're planning to do and what you'd like to happen. This will give us a great idea of whether our partnership makes sense.</p>
+          </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card cc shadow-sm p-3 mb-3 bg-body rounded">
+            <div class="card-content text-center">
+            <img src="img/icons8-facebook-like.gif" alt="handshake" class="rounded-circle parti" height="90" width="90">
+            <h3 class="parth">Recognition</h3>
+            <p class="partp">Whether in your event description, a banner image, social media posts, or otherwise, it'd helpful and appreciated to be credited as an event sposnor.</p>
+          </div>
+          </div>
+        </div>
+      </div>
+    
+     
+  </div>
+</section>
+
+
+
 
 
 <!--------------company-------------->
