--- a/learncode.html
+++ b/learncode.html
@@ -26,7 +26,7 @@
                   <li><a class="dropdown-item" href="learncode.html">Learn to code</a></li>
                   <li><a class="dropdown-item" href="voluntee.html">Volunteer</a></li>
                   <li><a class="dropdown-item" href="sponsor.html">Sponsor</a></li>
-                  <li><a class="dropdown-item" href="#">Partner</a></li>
+                  <li><a class="dropdown-item" href="partner.html">Partner</a></li>
                   <hr>
                   <li><a class="dropdown-item" href="#">Start a meet-up</a></li>
                 </ul>
